k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: backend
          image: sisilanay/todo-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
